--- a/.github/workflows/elixir-release.yml
+++ b/.github/workflows/elixir-release.yml
@@ -18,8 +18,8 @@ jobs:
     - name: Set up Elixir
       uses: erlef/setup-beam@v1
       with:
-        elixir-version: '1.15.4' # Update to match your project's Elixir version
-        otp-version: '26.0'      # Update to match your project's OTP version
+        elixir-version: '1.15.4'
+        otp-version: '26.0'
     
     - name: Restore dependencies cache
       uses: actions/cache@v3
@@ -33,16 +33,8 @@ jobs:
     - name: Install dependencies
       run: mix deps.get
     
-    - name: Check formatting
-      run: mix format --check-formatted
-      
-    - name: Run static code analysis
-      run: |
-        mix deps.get --only dev
-        mix credo
-        
     - name: Compile
-      run: mix compile --warnings-as-errors
+      run: mix compile
       
     - name: Run tests
       run: |
@@ -71,14 +63,14 @@ jobs:
         echo "RELEASE_NAME=${RELEASE_NAME}" >> $GITHUB_ENV
         echo "RELEASE_VERSION=${VERSION}" >> $GITHUB_ENV
         
-    - name: Upload release as artifact
-      uses: actions/upload-artifact@v3
+    - name: Upload release artifact
+      uses: actions/upload-artifact@v4
       with:
         name: release-build
         path: releases/*.zip
         retention-days: 5
         
-  create-github-release:
+  release:
     name: Create GitHub Release
     needs: build
     runs-on: ubuntu-latest
@@ -86,22 +78,18 @@ jobs:
     
     steps:
     - name: Download artifact
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: release-build
         path: releases
         
-    - name: List files
-      run: ls -la releases
-      
     - name: Create GitHub Release
-      id: create_release
       uses: softprops/action-gh-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: v${{ needs.build.outputs.RELEASE_VERSION || github.run_number }}
-        name: Release v${{ needs.build.outputs.RELEASE_VERSION || github.run_number }}
+        tag_name: release-${{ github.run_number }}
+        name: Release ${{ github.run_number }}
+        files: releases/*.zip
         draft: false
         prerelease: false
-        files: releases/*.zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
