attempt to fix flow

--- a/.github/workflows/elixir-release.yml
+++ b/.github/workflows/elixir-release.yml
@@ -43,7 +43,7 @@ jobs:
     - name: Install frontend dependencies
       run: |
         cd assets
-        npm ci
+        npm install
         
     - name: Build assets
       run: |
